modernized tests